--- a/index.html
+++ b/index.html
@@ -4,12 +4,122 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>BestShop</title>
+
 </head>
 <body>
+<header class="header">
+    <div class="header-container container">
+        <a href="#" class="logo">BestShop</a>
+        <nav>
+            <ul class="header-nav">
+                <li class="nav-element"><a href="#why-us" class="nav-link">Why us</a></li>
+                <li class="nav-element"><a href="#benefits" class="nav-link">Benefits</a></li>
+                <li class="nav-element"><a href="#prices"class="nav-link">Prices</a></li>
+                <li class="nav-element"><a href="#contact"class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="opening">
+    <div class="opening-content">
+       <h1 class="opening-header">Sell more!</h1>
+        <p class="opening-heading">Open shop on our platform and increase your sales</p>
+        <a href="#" class="button-large">Open your shop</a>
+    </div>
+    <img src="assets/background.png" alt="" class="opening-image"/>
+</section>
+
+<section class="statistics">
+    <div class="container">
+        <h2 class="statistics-title">The most popular sales platform in country</h2>
+
+        <div class="statistics-container">
+            <div class="statistics-single">
+                <div class="statistics-circle">
+                    <img src="assets/person.svg" alt="person" class="statistics-img"/>
+                </div>
+                <div class="statistics-number">100000+</div>
+                <div class="statistics-description">daily entries</div>
+            </div>
+
+            <div class="statistics-single">
+                <div class="statistics-circle">
+                    <img src="assets/eye.svg" alt="person" class="statistics-img"/>
+                </div>
+                <div class="statistics-number">20000000+</div>
+                <div class="statistics-description">seen products every day</div>
+            </div>
+
+            <div class="statistics-single">
+                <div class="statistics-circle">
+                    <img src="assets/catalog.svg" alt="person" class="statistics-img"/>
+                </div>
+                <div class="statistics-number">10000+</div>
+                <div class="statistics-description">added posts daily</div>
+                </div>
+            </div>
+    </div>
+
+</section>
+
+<section class="benefits">
+    <div class="benefits__container container">
+
+        <div class="benefits__single benefits__single--notebook">
+            <div class="benefits__text">
+                <h2 class="benefits__title">Be always first</h2>
+                <p class="benefits__description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam.
+                </p>
+            </div>
+            <div class="benefits__image">
+                <img src="assets/Macbook.png" alt="macbook" />
+            </div>
+        </div>
+
+        <div class="benefits__single benefits__single--phone">
+            <div class="benefits__text">
+                <h2 class="benefits__title">Your shop is<br>where you are!</h2>
+                <p class="benefits__description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam.
+                </p>
+            </div>
+            <div class="benefits__image">
+                <img src="assets/iPhone.png" alt="iPhone" />
+            </div>
+        </div>
+
+        <div class="benefits__double">
+            <div class="benefits__single benefits__single--solo">
+                <div class="benefits__text">
+                    <h2 class="benefits__title">Your shop is<br>where you are!</h2>
+                    <p class="benefits__description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                        enim ad minim veniam.
+                    </p>
+                </div>
+            </div>
+
+            <div class="benefits__single benefits__single--image">
+                <img src="assets/Trumpet.png" alt="Trumpet" />
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+    </div>
+</section>
 
 </body>
 </html>
